--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-inlinesvg": "^0.7.1",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
     "text-to-svg": "^3.1.3"
   },
